LUCENE-9028: fix test compile